--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
     // Optional theme
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css', integrity='sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp', crossorigin='anonymous')
+    link(rel='stylesheet', href='css/index.css')
     // Latest compiled and minified JavaScript
     script(src='https://code.jquery.com/jquery-3.3.1.min.js', integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=', crossorigin='anonymous')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
@@ -18,9 +19,9 @@ html
           br
           nav.navbar.navbar-default
             .container-fluid
-              .navbar-header
-                a.navbar-brand(href='#')
-                  //img(alt='Brand', src='...')
+              .navbar-header#image-container
+                a(href='#')#image
+                  img(alt='Brand', src='images/image.png', style='width: 150px;')
           br
           br        
           form
@@ -41,7 +42,7 @@ html
                   select#job-level-input.form-control
                     option(value='', selected='', disabled='', hidden='') Choose job level
                     option(value='1') Novice
-                    option(value='2') Advance Beginner
+                    option(value='2') Advanced
                     option(value='3') Competent
                     option(value='4') Proficient
                     option(value='5') Expert
