--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,19 @@ input[type=number]::-webkit-outer-spin-button {
     transition: all 0.2s ease-in-out;
 }
 
-#image-container{
+#image-container {
   width: 100%;
   text-align: center;
+}
+
+.custom-container {
+	background-color: rgba(0, 0, 0, 0.8);
+	padding:20px;
+	color: white;
+}
+
+body {
+	background-image: url("../images/bg.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
