--- a/views/index.pug
+++ b/views/index.pug
@@ -13,75 +13,78 @@ html
 
   body
     .container
-      .row
-        .col-md-6.col-md-offset-3
-          br
-          br
-          nav.navbar.navbar-default
-            .container-fluid
-              .navbar-header#image-container
-                a(href='#')#image
-                  img(alt='Brand', src='images/image.png', style='width: 150px;')
-          br
-          br        
-          form
-            .row
-              .col-md-6
-                .form-group
-                  label(for='education-input') Education
-                  select#education-input.form-control
-                    option(value='', selected='', disabled='', hidden='') Choose education
-                    option(value='1') Politehnica
-                    option(value='2') Universitate
-                    option(value='3') Cibernetica
-                    option(value='4') Other technical
-                    option(value='5') Other
-              .col-md-6    
-                .form-group
-                  label(for='job-level-input') Job Level
-                  select#job-level-input.form-control
-                    option(value='', selected='', disabled='', hidden='') Choose job level
-                    option(value='1') Novice
-                    option(value='2') Advanced
-                    option(value='3') Competent
-                    option(value='4') Proficient
-                    option(value='5') Expert
-            .row
-              .col-md-6
-                .form-group
-                  label(for='age-input') Age
-                  input#age-input.form-control(type='number')
-              .col-md-6
-                .form-group
-                  label(for='companies-worked-input') Number of companies worked
-                  input#companies-worked-input.form-control(type='number')
-            .row
-              .col-md-6
-                .form-group
-                  label(for='trainings-last-year-input') Trainings last year
-                  input#trainings-last-year-input.form-control(type='number')
-              .col-md-6        
-                .form-group
-                  label(for='years-company-input') Years at company
-                  input#years-company-input.form-control(type='number')
-            .row          
-              .col-md-6        
-                .form-group
-                  label(for='years-since-last-promotion-input') Years since last promotion
-                  input#years-since-last-promotion-input.form-control(type='number')
-              .col-md-6
-                .form-group
-                  label(for='distance-from-home-input') Distance from home
-                  input#distance-from-home-input.form-control(type='number')
-            .row
-              .col-md-6      
-                .form-group
-                  label(for='salary-input') Salary
-                  input#salary-input.form-control(type='number')
-              .col-md-6    
-                .form-group
-                  label(for='working-years-input') Total working years
-                  input#working-years-input.form-control(type='number')     
-            .row
-              .col-md-2.col-md-offset-5
-                button.btn.btn-primary(type='button', onclick="send()") Submit
+        br
+        br
+        .row
+          .col-md-6.col-md-offset-3
+            .custom-container 
+              br
+              nav.navbar.navbar-default
+                .container-fluid
+                  .navbar-header#image-container
+                    a(href='#')#image
+                      img(alt='Brand', src='images/image.png', style='width: 150px;')
+              br
+              br        
+              form
+                .row
+                  .col-md-6
+                    .form-group
+                      label(for='education-input') Education
+                      select#education-input.form-control
+                        option(value='', selected='', disabled='', hidden='') Choose education
+                        option(value='1') Politehnica
+                        option(value='2') Universitate
+                        option(value='3') Cibernetica
+                        option(value='4') Other technical
+                        option(value='5') Other
+                  .col-md-6    
+                    .form-group
+                      label(for='job-level-input') Job Level
+                      select#job-level-input.form-control
+                        option(value='', selected='', disabled='', hidden='') Choose job level
+                        option(value='1') Novice
+                        option(value='2') Advanced
+                        option(value='3') Competent
+                        option(value='4') Proficient
+                        option(value='5') Expert
+                .row
+                  .col-md-6
+                    .form-group
+                      label(for='age-input') Age
+                      input#age-input.form-control(type='number')
+                  .col-md-6
+                    .form-group
+                      label(for='companies-worked-input') Number of companies worked
+                      input#companies-worked-input.form-control(type='number')
+                .row
+                  .col-md-6
+                    .form-group
+                      label(for='trainings-last-year-input') Trainings last year
+                      input#trainings-last-year-input.form-control(type='number')
+                  .col-md-6        
+                    .form-group
+                      label(for='years-company-input') Years at company
+                      input#years-company-input.form-control(type='number')
+                .row          
+                  .col-md-6        
+                    .form-group
+                      label(for='years-since-last-promotion-input') Years since last promotion
+                      input#years-since-last-promotion-input.form-control(type='number')
+                  .col-md-6
+                    .form-group
+                      label(for='distance-from-home-input') Distance from home
+                      input#distance-from-home-input.form-control(type='number')
+                .row
+                  .col-md-6      
+                    .form-group
+                      label(for='salary-input') Salary
+                      input#salary-input.form-control(type='number')
+                  .col-md-6    
+                    .form-group
+                      label(for='working-years-input') Total working years
+                      input#working-years-input.form-control(type='number')     
+                br
+                .row
+                  .col-md-2.col-md-offset-5
+                    button.btn.btn-info(type='button', onclick="send()") Submit
